Fix for issue with hamburger not opening Fix for issue with sidebar not being able to see bottom links on mobile Fix for error reported in edge with service worker registration

--- a/styles/base.scss
+++ b/styles/base.scss
@@ -10,6 +10,10 @@ body {
 	font-family: "Segoe UI VSS (Regular)","Segoe UI","-apple-system",BlinkMacSystemFont,Roboto,"Helvetica Neue",Helvetica,Ubuntu,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
 	font-size: 14px;
 }
+.theme
+{
+	display: none;
+}
 
 h1,
 h2,
@@ -88,10 +92,8 @@ h3 {
     left: 0px;
     margin: 0px;
     cursor: pointer;
-    font-size: 1.5em;
-    padding: 15px;
-    background-color: #007dc6;
-    color: white;
+    font-size: 2em;
+    padding: 6px;
     -webkit-touch-callout: none;
     -webkit-user-select: none;
     -khtml-user-select: none;
@@ -182,6 +184,10 @@ p.note {
 		background-repeat: no-repeat;
 		left: 4px;
 		top: 4px;
+	}
+	&.store::before
+	{
+		background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' aria-hidden='true' focusable='false' width='1em' height='1em' style='-ms-transform: rotate(360deg); -webkit-transform: rotate(360deg); transform: rotate(360deg);' preserveAspectRatio='xMidYMid meet' viewBox='0 0 24 24'%3E%3Cpath d='M17 18c-1.11 0-2 .89-2 2a2 2 0 0 0 2 2a2 2 0 0 0 2-2a2 2 0 0 0-2-2M1 2v2h2l3.6 7.59l-1.36 2.45c-.15.28-.24.61-.24.96a2 2 0 0 0 2 2h12v-2H7.42a.25.25 0 0 1-.25-.25c0-.05.01-.09.03-.12L8.1 13h7.45c.75 0 1.41-.42 1.75-1.03l3.58-6.47c.07-.16.12-.33.12-.5a1 1 0 0 0-1-1H5.21l-.94-2M7 18c-1.11 0-2 .89-2 2a2 2 0 0 0 2 2a2 2 0 0 0 2-2a2 2 0 0 0-2-2z' /%3E%3C/svg%3E");
 	}
 }
 
