--- a/styles/options.scss
+++ b/styles/options.scss
@@ -3,7 +3,6 @@
 	text-align: right;
 	font-size: 0.8em;
 	margin: 5px 0px;
-	height: 1em;
 	> div
 	{
 		display: inline-block;
